<resources>
    <string name="app_name">Backpack</string>
    <string name="title_landmark_list">Landmarks</string>
    <string name="title_landmark_detail">Landmark Detail</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <!-- Error strings -->
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>
    <string name="geofence_transition_notification_text">Click notification to return to app</string>
    <string name="title_activity_settings">Settings</string>



    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_near_landmark_notifications">Near landmark notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_sound">Notification sound</string>


    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Landmarks Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>


    <!-- Strings related to Notification Enabled Sound preference -->
    <string name="pref_enable_notifications_sound_key" translatable="false">enable_notifications_sound</string>
    <string name="pref_enable_notifications_sound_label">Notifications Sound</string>

    <string name="pref_enable_notifications_sound_true">Enabled</string>
    <string name="pref_enable_notifications_sound_false">Not Enabled</string>
    <string name="pref_enable_notifications_sound_default" translatable="false">true</string>
    <string name="action_settings">Settings</string>
    <string name="enter_transition">You are near</string>
    <string name="exit_transition">You are getting far from</string>
    <string name="street_view">Street View</string>
    <string name="internet_check">Check your internet connection.</string>
    <string name="internetConnection">No internet connection!</string>
    <string name="retry">RETRY</string>
    <string name="empty_landmarks_list">No Landmarks Information Available</string>
    <string name="empty_landmarks_list_no_network">No Landmarks information available. The network is not available to fetch weather data.</string>
    <string name="empty_landmarks_list_server_down">No Landmarks information available. The server is not returning data</string>
    <string name="empty_landmarks_list_server_error">No Landmarks information available. The server is not returning valid data. Please check for an updated version of Backpack.</string>
    <string name="empty_text">Not available</string>

    <!-- For Shared Element Transitions -->
    <string name="detail_icon_transition_name" translatable="false">TN_DetailIcon</string>
    <string name="details">Details</string>

</resources>
