<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    />
    <CheckBoxPreference
        android:defaultValue="@string/pref_enable_notifications_default"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:title="@string/pref_enable_notifications_label" />

    <CheckBoxPreference
        android:dependency="@string/pref_enable_notifications_key"
        android:defaultValue="@string/pref_enable_notifications_sound_default"
        android:key="@string/pref_enable_notifications_sound_key"
        android:summaryOff="@string/pref_enable_notifications_sound_false"
        android:summaryOn="@string/pref_enable_notifications_sound_true"
        android:title="@string/pref_enable_notifications_sound_label" />

</PreferenceScreen>